--- a/package.json
+++ b/package.json
@@ -29,5 +29,6 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "typescript": "^5.2.2",
     "vite": "^5.3.4"
-  }
+  },
+  "packageManager": "yarn@4.3.1"
 }
